Incorporacion de manejo de rutas y responsive

--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,15 @@
   <script>
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
+
+    const firebaseConfig = {
+  apiKey: "AIzaSyCzcYVz0tLzRJTx1SOBb444QaolQiOByn0",
+  authDomain: "fir-firbase-735bc.firebaseapp.com",
+  projectId: "fir-firbase-735bc",
+  storageBucket: "fir-firbase-735bc.appspot.com",
+  messagingSenderId: "293793968664",
+  appId: "1:293793968664:web:dbca84945bf1ad450a496d"
+};
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
